--- a/app/src/main/res/layout/fragment_care_plan_progress.xml
+++ b/app/src/main/res/layout/fragment_care_plan_progress.xml
@@ -4,8 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_care_plan_progress"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 </LinearLayout>
+
+
