--- a/app/src/main/res/layout/fragment_g_p_profile.xml
+++ b/app/src/main/res/layout/fragment_g_p_profile.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/background_image_description"
             android:src="@drawable/background_logo" />
 
         <LinearLayout
@@ -22,207 +22,63 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/FirstName"
-                android:layout_width="133dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/first_name"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
-
-            <TextView
-                android:id="@+id/txtFirstName"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="5dp"
-                android:text="@string/johnny"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#E5E5E5" />
-
-            <TextView
-                android:id="@+id/MiddleName"
-                android:layout_width="250dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/middle_name"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/carePlanSummary" />
-
-            <TextView
-                android:id="@+id/txtMiddleName"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="5dp"
-                android:text="@string/none"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#E5E5E5" />
-
-            <TextView
-                android:id="@+id/LastName"
-                android:layout_width="250dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/last_name"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nutritionHydrationSummary" />
-
-
-            <TextView
-                android:id="@+id/txtLastName"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="5dp"
-                android:inputType="textMultiLine"
-                android:text="@string/smiths"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#E5E5E5" />
-
-            <TextView
-                android:id="@+id/clinic_addresstext"
-                android:layout_width="250dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/clinic_address"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/supportReqSummary" />
-
-            <TextView
-                android:id="@+id/txtClinicAddress"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="5dp"
-                android:text="@string/_31_solaris_drive_melbourne_vic_2767_australia"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#E5E5E5" />
-
+            <!-- Phone Number -->
             <TextView
                 android:id="@+id/phoneNumber"
-                android:layout_width="133dp"
-                android:layout_height="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/phone_number"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dietTimingSummary" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/txtPhone"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="5dp"
-                android:inputType="textMultiLine"
+                android:gravity="center_vertical"
+                android:paddingStart="8dp"
                 android:text="@string/_61_399_832_791"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView131" />
+                android:textSize="14sp"
+                android:backgroundTint="#ECECEC" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#E5E5E5" />
 
+            <!-- Last Name -->
             <TextView
-                android:id="@+id/Email"
+                android:id="@+id/LastName"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/email"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/drinkLikesSummary" />
-
-            <TextView
-                android:id="@+id/txtEmail"
-                android:layout_width="365dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/last_name"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txtLastName"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="5dp"
-                android:backgroundTint="#ECECEC"
-                android:text="@string/sample_gmail_com"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView61" />
+                android:gravity="center_vertical"
+                android:paddingStart="8dp"
+                android:text="@string/smiths"
+                android:textSize="14sp"
+                android:backgroundTint="#ECECEC" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#E5E5E5" />
-
-            <TextView
-                android:id="@+id/faxtext"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/fax"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/drinkLikesSummary" />
-
-            <TextView
-                android:id="@+id/txtFax"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="5dp"
-                android:backgroundTint="#ECECEC"
-                android:text="@string/_336_555_2222"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView61" />
-
         </LinearLayout>
     </FrameLayout>
 </ScrollView>
