--- a/app/src/main/res/layout/fragment_medical_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_medical_diagnostics.xml
@@ -21,7 +21,7 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
-
+            <!-- Title and Edit Button -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -32,38 +32,31 @@
                 <TextView
                     android:id="@+id/medicalDiagnosticsTitleTextView"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_bold"
                     android:gravity="center"
                     android:text="@string/medical_diagnostics"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
-                    tools:layout_editor_absoluteX="132dp"
-                    tools:layout_editor_absoluteY="10dp" />
+                    android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/header_edit_button"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginLeft="15dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="16dp"
                     android:background="@drawable/medical_diagnostics_edit"
-                    android:baselineAlignBottom="false"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.789"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
+                    android:contentDescription="@string/edit_button"
+                    android:padding="8dp" />
             </LinearLayout>
 
+            <!-- TabLayout -->
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/medicalDiagnosticsTabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:layout_editor_absoluteX="182dp"
-                tools:layout_editor_absoluteY="373dp">
+                android:contentDescription="@string/medical_diagnostics_tabs" />
 
-            </com.google.android.material.tabs.TabLayout>
-
+            <!-- ScrollView with ViewPager2 -->
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -73,20 +66,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/medicalDiagnosticsViewPager"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        tools:layout_editor_absoluteX="145dp"
-                        tools:layout_editor_absoluteY="500dp" />
+                        android:layout_height="match_parent" />
                 </LinearLayout>
             </ScrollView>
-
-
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
