--- a/app/src/main/res/layout/fragment_next_of_kin.xml
+++ b/app/src/main/res/layout/fragment_next_of_kin.xml
@@ -15,262 +15,212 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/background_image_description"
             android:src="@drawable/background_logo" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="-16dp">
+            android:orientation="vertical">
 
+            <!-- Navigation Buttons -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <!-- Left Button -->
                 <Button
                     android:id="@+id/polygon_left"
-                    android:layout_width="26dp"
-                    android:layout_height="26dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:background="@drawable/polygon_2"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.784"
+                    android:contentDescription="@string/left_navigation_button"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.27" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintVertical_bias="0.5" />
 
+                <!-- Right Button -->
                 <Button
                     android:id="@+id/polygon_right"
-                    android:layout_width="26dp"
-                    android:layout_height="26dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:background="@drawable/polygon_1"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:contentDescription="@string/right_navigation_button"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.890"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.27" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintVertical_bias="0.5" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- First Name -->
             <TextView
                 android:id="@+id/FirstName"
-                android:layout_width="133dp"
-                android:layout_height="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/first_name"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/input_nok_FirstName"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="1dp"
-                android:autofillHints=""
-                android:background="@null"
+                android:layout_marginTop="8dp"
                 android:hint="@string/enter_a_first_name"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                android:textSize="14sp" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#E5E5E5" />
 
+            <!-- Middle Name -->
             <TextView
                 android:id="@+id/MiddleName"
-                android:layout_width="250dp"
-                android:layout_height="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/middle_name"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/carePlanSummary" />
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/input_nok_MiddleName"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="1dp"
-                android:autofillHints=""
-                android:background="@null"
+                android:layout_marginTop="8dp"
                 android:hint="@string/enter_a_middle_name"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                android:textSize="14sp" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#E5E5E5" />
 
+            <!-- Last Name -->
             <TextView
                 android:id="@+id/LastName"
-                android:layout_width="250dp"
-                android:layout_height="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/last_name"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nutritionHydrationSummary" />
-
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/input_nok_LastName"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="1dp"
-                android:autofillHints=""
-                android:background="@null"
+                android:layout_marginTop="8dp"
                 android:hint="@string/enter_a_last_name"
-                android:inputType="textMultiLine"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                android:textSize="14sp" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#E5E5E5" />
 
+            <!-- Date of Birth -->
             <TextView
                 android:id="@+id/DateOfBirth"
-                android:layout_width="250dp"
-                android:layout_height="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-black"
-                android:text="@string/address"
+                android:text="@string/date_of_birth"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/supportReqSummary" />
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/input_nok_DateOfBirth"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginBottom="15dp"
-                android:autofillHints=""
-                android:background="@null"
-                android:hint="@string/enter_search_address"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />
+                android:layout_marginTop="8dp"
+                android:hint="@string/enter_date_of_birth"
+                android:textSize="14sp" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#E5E5E5" />
 
+            <!-- Phone Number -->
             <TextView
                 android:id="@+id/medicareNumber"
-                android:layout_width="133dp"
-                android:layout_height="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/phone_number"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dietTimingSummary" />
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/input_nok_MedicareNumber"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="1dp"
-                android:autofillHints=""
-                android:background="@null"
-                android:inputType="textMultiLine"
-                android:text="@string/_61_412_345_678"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView131" />
+                android:layout_marginTop="8dp"
+                android:hint="@string/enter_phone_number"
+                android:textSize="14sp" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#E5E5E5" />
 
+            <!-- Email -->
             <TextView
                 android:id="@+id/WesternAffairsNumber"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/email"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/drinkLikesSummary" />
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/input_nok_WesternAffairsNumber"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
                 android:layout_marginStart="16dp"
-                android:autofillHints=""
-                android:background="@null"
-                android:backgroundTint="#ECECEC"
-                android:hint="@string/someone_example_com"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView61" />
+                android:layout_marginTop="8dp"
+                android:hint="@string/enter_email"
+                android:textSize="14sp" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#E5E5E5" />
 
+            <!-- More Info Button -->
             <Button
                 android:id="@+id/MoreInfoOfPatient"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="100dp"
-                android:layout_marginBottom="10dp"
+                android:layout_margin="16dp"
                 android:backgroundTint="#3297C3"
-                android:fontFamily="@font/poppins_bold"
                 android:text="@string/more_info"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/behaviorManagementSummary" />
-
+                android:textSize="16sp" />
         </LinearLayout>
     </FrameLayout>
 </ScrollView>
