Add  new features

--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="deakin.gopher.guardian.view.general.NotificationsActivity">
 
@@ -29,7 +30,7 @@
             android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
 
-    <!-- New Notifications Label -->
+
     <TextView
         android:id="@+id/newNotificationsLabel"
         android:layout_width="wrap_content"
@@ -45,8 +46,8 @@
     <!-- New Notifications RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/newNotificationsRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/newNotificationsLabel"
         app:layout_constraintBottom_toTopOf="@id/previousNotificationsLabel"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,8 +70,8 @@
     <!-- Previous Notifications RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/previousNotificationsRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/previousNotificationsLabel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +79,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
+
 
 
