--- a/app/src/main/res/layout/activity_care_plan_management.xml
+++ b/app/src/main/res/layout/activity_care_plan_management.xml
@@ -51,6 +51,18 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
+    <!-- RecyclerView Section -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCarePlans"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/headerCard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/iconGridLayout"
+        tools:listitem="@layout/care_plan_item" />
+
     <!-- Buttons Section -->
     <GridLayout
         android:id="@+id/iconGridLayout"
@@ -67,6 +79,7 @@
 
         <!-- Add Task Icon -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/iconAddTask"
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:cardCornerRadius="16dp"
@@ -81,7 +94,7 @@
                 android:gravity="center">
 
                 <ImageView
-                    android:id="@+id/iconAddTask"
+
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:src="@drawable/add_task_icon"
@@ -101,6 +114,7 @@
 
         <!-- Add Note Icon -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/iconAddNote"
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:cardCornerRadius="16dp"
@@ -115,7 +129,7 @@
                 android:gravity="center">
 
                 <ImageView
-                    android:id="@+id/iconAddNote"
+
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:src="@drawable/add_note_icon"
@@ -135,6 +149,7 @@
 
         <!-- Report Incident Icon -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/iconReportIncident"
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:cardCornerRadius="16dp"
@@ -143,13 +158,14 @@
             app:cardBackgroundColor="@color/gray">
 
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center">
 
                 <ImageView
-                    android:id="@+id/iconReportIncident"
+
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:src="@drawable/report_incident_icon"
@@ -169,6 +185,7 @@
 
         <!-- Medical History Icon -->
         <androidx.cardview.widget.CardView
+            android:id="@+id/iconMedicalHistory"
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:cardCornerRadius="16dp"
@@ -183,7 +200,7 @@
                 android:gravity="center">
 
                 <ImageView
-                    android:id="@+id/iconMedicalHistory"
+
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:src="@drawable/medical_history_icon"
