--- a/app/src/main/res/layout/activity_homepage4admin.xml
+++ b/app/src/main/res/layout/activity_homepage4admin.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="deakin.gopher.guardian.view.general.Homepage4admin">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="deakin.gopher.guardian.view.general.Homepage4admin">
 
     <Button
         android:id="@+id/nurseRoseterButton"
@@ -42,67 +42,67 @@
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <TextView
-            android:id="@+id/newPaitentText"
-            android:layout_width="87dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="72dp"
-            android:layout_marginTop="128dp"
-            android:elevation="4dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/new_patient"
-            android:textColor="@color/white"
-            android:textSize="13sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        android:id="@+id/newPaitentText"
+        android:layout_width="87dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="128dp"
+        android:elevation="4dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="@string/new_patient"
+        android:textColor="@color/white"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <TextView
-            android:id="@+id/dailyReportTxt"
-            android:layout_width="102dp"
-            android:layout_height="26dp"
-            android:layout_marginStart="256dp"
-            android:layout_marginTop="128dp"
-            android:elevation="4dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/daily_report"
-            android:textColor="@color/white"
-            android:textSize="13sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        android:id="@+id/dailyReportTxt"
+        android:layout_width="102dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="256dp"
+        android:layout_marginTop="128dp"
+        android:elevation="4dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="@string/daily_report"
+        android:textColor="@color/white"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <Button
-            android:id="@+id/patientListButton"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="52dp"
-            android:layout_marginTop="180dp"
-            android:background="@drawable/homepage_button_background"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        android:id="@+id/patientListButton"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="180dp"
+        android:background="@drawable/homepage_button_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <TextView
-            android:id="@+id/patientListTxt"
-            android:layout_width="102dp"
-            android:layout_height="26dp"
-            android:layout_marginStart="72dp"
-            android:layout_marginTop="272dp"
-            android:elevation="4dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/patient_list"
-            android:textColor="@color/white"
-            android:textSize="13sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        android:id="@+id/patientListTxt"
+        android:layout_width="102dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="272dp"
+        android:elevation="4dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="@string/patient_list"
+        android:textColor="@color/white"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <View
-            android:id="@+id/patientListIcon"
-            android:layout_width="42dp"
-            android:layout_height="44dp"
-            android:layout_marginStart="92dp"
-            android:layout_marginTop="216dp"
-            android:background="@drawable/patient_list_icon"
-            android:elevation="4dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        android:id="@+id/patientListIcon"
+        android:layout_width="42dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="216dp"
+        android:background="@drawable/patient_list_icon"
+        android:elevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <Button
         android:id="@+id/sighOutButton"
@@ -175,90 +175,121 @@
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <View
-            android:id="@+id/newPatientIcon"
-            android:layout_width="55dp"
-            android:layout_height="44dp"
-            android:layout_marginStart="84dp"
-            android:layout_marginTop="72dp"
-            android:background="@drawable/new_patient_icon"
-            android:elevation="4dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        android:id="@+id/newPatientIcon"
+        android:layout_width="55dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="72dp"
+        android:background="@drawable/new_patient_icon"
+        android:elevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <Button
-            android:id="@+id/newPaitentButton"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="52dp"
-            android:layout_marginTop="36dp"
-            android:background="@drawable/homepage_button_background"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        android:id="@+id/newPaitentButton"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/homepage_button_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <View
-            android:id="@+id/dailyReportIcon"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:layout_marginStart="276dp"
-            android:layout_marginTop="72dp"
-            android:background="@drawable/daily_report_icon"
-            android:elevation="4dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        android:id="@+id/dailyReportIcon"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="276dp"
+        android:layout_marginTop="72dp"
+        android:background="@drawable/daily_report_icon"
+        android:elevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <Button
-            android:id="@+id/dailyReportButton4caretaker"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="236dp"
-            android:layout_marginTop="36dp"
-            android:background="@drawable/homepage_button_background"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+        android:id="@+id/dailyReportButton4caretaker"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/homepage_button_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
+
+
+    <LinearLayout
+        android:id="@+id/settingsAdminButton"
+        android:background="@drawable/homepage_button_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dailyReportButton4caretaker"
+
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="332dp"
+        >
+        <ImageView
+
+            android:src="@mipmap/ic_admin"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            ></ImageView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:text="Care Plan"
+            android:layout_height="wrap_content"></TextView>
+
+
+    </LinearLayout>
 
     <androidx.cardview.widget.CardView
-            android:id="@+id/medicalDiaganosticsHeaderCardView"
-            android:layout_width="0dp"
-            android:layout_height="220dp"
-            android:layout_marginTop="-40dp"
-            app:cardBackgroundColor="@color/TG_blue"
-            app:cardCornerRadius="40dp"
-            app:cardElevation="4dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+        android:id="@+id/medicalDiaganosticsHeaderCardView"
+        android:layout_width="0dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="-40dp"
+        app:cardBackgroundColor="@color/TG_blue"
+        app:cardCornerRadius="40dp"
+        app:cardElevation="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
-                    android:id="@+id/medicalDiagnosticsTitleTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:fontFamily="@font/poppins_bold"
-                    android:text="@string/welcome_admin"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/medicalDiagnosticsEditImageView" />
+                android:id="@+id/medicalDiagnosticsTitleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/welcome_admin"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/medicalDiagnosticsEditImageView" />
 
             <ImageView
-                    android:id="@+id/medicalDiagnosticsEditImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="54dp"
-                    android:contentDescription="TODO"
-                    app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.498"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/avatar_icon" />
+                android:id="@+id/medicalDiagnosticsEditImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="54dp"
+                android:contentDescription="TODO"
+                app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/avatar_icon" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
